<resources>
    <string name="app_name">Kesa</string>
    <string name="action_settings">Settings</string>

    <!-- Drawer Strings -->
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>

    <!-- Icon Strings -->
    <string name="ic_profile">Profile</string>
    <string name="ic_settings">Settings</string>
    <string name="ic_done">Done</string>
    <string name="ic_members">Members</string>
    <string name="ic_search">Search</string>

    <!-- Dialog Strings-->
    <string name="authenticate_dialog_message">Authenticating…</string>
    <string name="change_password_dialog_message">Changing password…</string>
    <string name="change_email_dialog_message">Changing email…</string>
    <string name="saving_or_updating_user_dialog_message">Saving/Updating user…</string>
    <string name="retrieving_user_dialog_message">Retrieving user information…</string>
    <string name="create_account_dialog_message">Creating account...</string>

    <!-- Firebase Url String -->
    <string name="firebase_url">https://torrid-inferno-4735.firebaseio.com/</string>
    <string name="action_edit">Edit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>

    <!-- EditTextView Hint Strings-->
    <string name="name_edit_text_view_hint">Name</string>
    <string name="program_edit_text_view_hint">Program</string>
    <string name="phone_number_edit_text_view_hint">Phone Number</string>
    <string name="email_edit_text_hint">Email</string>
    <string name="password_edit_text_hint">Password</string>
    <string name="first_name_hint">First name</string>
    <string name="login_button_text">Login</string>
    <string name="create_account_text">No account yet? Create one</string>
    <string name="create_account_button_text">Create Account</string>

    <!-- Activity title strings-->
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="admission_year_edit_text_hint">Admission Year</string>
    <string name="publicize_switch_content">Making the contact information visible to anyone. By default, the contact information is only visible to executive members.</string>
    <string name="publicize_switch_title">Publicize contact information</string>
    <string name="ic_logout_black">Log Out</string>
    <string name="contact_not_available_message">The following contact information is not public. In case of emergency, please contact one of the executive members for further assistance.</string>
    <string name="last_name_hint">Last name</string>
    <string name="change_picture_text">Change Picture</string>
    <string name="saving_or_updating_event_dialog_message">Saving/Updating event.</string>
    <string name="saving_event_dialog_message">Creating event…</string>
    <string name="title_activity_event_create">EventCreateActivity</string>
    <string name="retrieving_event_dialog_message">Retrieving events…</string>

</resources>
