<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:checked="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/ic_profile"/>

        <item
            android:id="@+id/members"
            android:checked="true"
            android:icon="@drawable/ic_members"
            android:title="@string/ic_members"/>

        <item
            android:id="@+id/events"
            android:checked="true"
            android:icon="@drawable/ic_members"
            android:title="events
            "/>

        <item
            android:id="@+id/logout"
            android:checked="true"
            android:icon="@drawable/ic_logout_black"
            android:title="@string/ic_logout_black"/>
    </group>
</menu>