<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="56dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:src="@drawable/kesa_text"/>

    <!--  Email Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent">

        <EditText
            android:hint="@string/email_edit_text_hint"
            android:id="@+id/emailEditText"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent">

        <EditText
            android:hint="@string/password_edit_text_hint"
            android:id="@+id/passwordEditText"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Signup Button -->
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/createAccountButton"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="6dp"
        android:layout_width="fill_parent"
        android:textColor="@color/md_white_1000"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:padding="12dp"
        android:text="@string/create_account_button_text"/>

    <TextView
        android:gravity="center"
        android:id="@+id/signInTextView"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_width="fill_parent"
        android:text="Already a member? Login"
        android:textSize="16sp"/>

</LinearLayout>
