<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundNull"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".profile.EditProfileActivity"
    tools:showIn="@layout/activity_edit_profile">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_profile"
                    android:fontFamily="sans-serif"
                    android:hint="@string/name_edit_text_view_hint"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:paddingBottom="20dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/name"
                android:background="@color/colorBackgroundNull"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/program"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/divider"
                android:layout_marginTop="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/programEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_program"
                    android:fontFamily="sans-serif"
                    android:hint="@string/program_edit_text_view_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingBottom="20dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/secondDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/program"
                android:background="@color/colorBackgroundNull"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/secondDivider"
                android:layout_marginTop="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/admissionYearEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_program"
                    android:fontFamily="sans-serif"
                    android:hint="@string/admission_year_edit_text_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingBottom="20dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mobileEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_mobile_black"
                    android:fontFamily="sans-serif"
                    android:hint="@string/phone_number_edit_text_view_hint"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingBottom="20dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
